refactor: completely refactored models
- also dropped old admin app
