# src/Lasertag.DomainModel/DomainEvents/GameEvents/GameLobbyCreated.cs
@@ -1,6 +1,0 @@
-﻿using Orleans;
-
-namespace Lasertag.DomainModel.DomainEvents.GameEvents;
-
-[GenerateSerializer]
-public record GameLobbyCreated(GameGroup[] GameSetGroups) : DomainEventBase;
