# src/Lasertag.DomainModel/DomainEvents/GameEvents/GameSetActivated.cs
@@ -1,6 +1,0 @@
-﻿using Orleans;
-
-namespace Lasertag.DomainModel.DomainEvents.GameEvents;
-
-[GenerateSerializer]
-public record GameSetActivated(Guid PlayerId, Guid GameSetId) : DomainEventBase;
