# src/Lasertag.DomainModel/DomainEvents/GameEvents/GameSetConnected.cs
@@ -1,6 +1,0 @@
-﻿using Orleans;
-
-namespace Lasertag.DomainModel.DomainEvents.GameEvents;
-
-[GenerateSerializer]
-public record GameSetConnected(Guid GameSetId) : DomainEventBase;
