# src/Lasertag.DomainModel/DomainEvents/GameEvents/GameSetDisconnected.cs
@@ -1,6 +1,0 @@
-﻿using Orleans;
-
-namespace Lasertag.DomainModel.DomainEvents.GameEvents;
-
-[GenerateSerializer]
-public record GameSetDisconnected(Guid GameSetId) : DomainEventBase;
