# src/Lasertag.DomainModel/GameRound.cs
@@ -8,18 +8,12 @@ public class GameRound
 {
     [Id(0)] public Guid Id { get; set; }
 
-    [Id(1)] public int ShotsFired { get; set; }
-
-    [Id(2)] public List<PlayerStats> PlayerStats { get; set; } = new();
-
-    [Id(3)] public int ShotsHit { get; set; }
+    [Id(1)] public GameGroup[] GameSetGroups { get; set; } = { };
 
     [UsedImplicitly]
-    [Id(4)] public int Version { get; set; }
+    [Id(2)] public int Version { get; set; }
 
-    [Id(5)] public GameRoundStatus Status { get; set; }
+    [Id(3)] public GameRoundStatus Status { get; set; }
 
-    [Id(6)] public List<ActiveGameSet> ActiveGameSets { get; set; } = new();
-
-    [Id(7)] public GameGroup[] GameSetGroups { get; set; } = { };
+    [Id(4)] public List<ActiveGameSet> ActiveGameSets { get; set; } = new();
 }
